--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,22 @@
         </plugins>
     </build>
 <reporting>
-    <!-- Générer un rapport findbugs et résoudre les bugs -->
-    <!-- Générer un rapport surefire -->
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-project-info-reports-plugin</artifactId>
+            <version>2.9</version>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>3.0.0-M5</version>
+        </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>findbugs-maven-plugin</artifactId>
+            <version>3.0.3</version>
+        </plugin>
+    </plugins>
 </reporting>
 </project>
